UIP-2600 Cannonball release date is now October
Change-Id: I88a17d35b86dbf7f8cb98cef254c0609c07f05c5

--- a/packages/ui-library/src/demo/components/docs/cannonball/Intro.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Intro.mdx
@@ -1,6 +1,6 @@
 # UI Library v4.0.0: Cannonball
 
-The UI Library team will release version 4.0.0 (codenamed Cannonball) of the library in August of 2019.
+The UI Library team will release version 4.0.0 (codenamed Cannonball) of the library in late 2019.
 The goal of this release is to eliminate years of tech debt, speed up library development, and set the stage for improvements beyond v4.
 We also want to improve our documentation and enhance the developer experience.
 This means modifying several legacy behaviors and expectations from previous versions of the library.
