--- a/packages/ui-library/src/demo/components/docs/cannonball/Release.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Release.mdx
@@ -1,6 +1,6 @@
 # The Release
 
-Version 4 of the library will be released in August 2019.
+Version 4 of the library will be released in October 2019 with a beta available in August.
 All breaking changes will be finalized and documented by May 2019 so that developers will have several months to respond to the deprecation and upgrade warnings that we’ll be adding between February and May.
 The upgrade experience will allow projects to opt into most of the v4 functionality while still using v3 ensuring an easy and smooth upgrade.
 
