--- a/packages/ui-library/src/demo/components/docs/cannonball/Timeline.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Timeline.mdx
@@ -9,5 +9,9 @@ Users of the UI Library will begin to see console warnings about v4 deprecations
 The UI Library team will no longer add new deprecation warnings to give a 3 month time frame for developers to address the warnings. If no warnings appear in your console, you are ready to update to v4 on release.
 
 ## August 2
+### 4.0.0 beta
+A beta version of the library with v4 changes will be made available as a node module that can be included in projects for testing.
+
+## October
 ### 4.0.0 release
 UI Library v4.0.0 will be released. 3.x releases will still work, but no new work or releases will be done in v3. All new designs and features will take place in v4.
