UIP-2592: Added documentation page for render props
Change-Id: I35e9bd0342d629ff75585b8000944d366cc34985

--- a/packages/ui-library/src/demo/components/docs/UsingComponents.mdx
+++ b/packages/ui-library/src/demo/components/docs/UsingComponents.mdx
@@ -14,3 +14,6 @@ Every component has a documentation page that is linked to from the top right of
 
 ## Flags
 Some components support the ‘flags’ prop, which lets you tweak functionality. Flags allow us to release new functionality or try out different default behaviors without breaking backwards compatibility. The component’s demo will list the flags it supports and let you turn them on and off to see what the effects are. When you are ready to use the flags in your own app, you’ll provide them to the prop as an array of strings.
+
+## Render Props
+Some components use a render prop pattern to make it easier to add functionality to a component during implementation. For example, we often use this pattern when rendering buttons that might need to be wrapped in one of our Tooltip components. More information can be found on the Render Props page.
