UIP-2707 Updated Getting Ready for V4 documentation for beta version
Change-Id: I48b7364adb1d74e85ee600cec36dde1bed94ce62

--- a/packages/ui-library/src/demo/components/docs/cannonball/GettingReadyV4.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/GettingReadyV4.mdx
@@ -1,5 +1,8 @@
 # Getting Ready for Cannonball: the UI Library Version 4.0.0
-As of May 5, we finalized all our breaking changes for v4 of the UI Library. We are planning to release this version on August 2, 2019. After that date, while we will continue to support v3 of the Library, all further component development will be done in v4.
+
+We are currently planning to release version 4.0.0 in October 2019. while we will continue to support v3 of the Library, all further component development will be done in v4.
+
+You can try out a beta version of v4 in your projects with this command: `npm install ui-library@beta`
 
 Our goal is to make the upgrade close to painless. To that end, we developed the new v4 behaviors in v3 and put them behind feature flags. This allows you to try out v4 right away and make any changes you need to make over the next few months. If you are already using the latest version of the library, you should be seeing several console warnings calling out components you should address. These fall into a few main categories.
 
