--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-51-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-51-0.md
@@ -1,3 +1,4 @@
+*This release has known bugs. Use patch version 3.51.0 instead.*
 - [UIP-2495 When FormTextField's flexWidth argument is set to true, text field will overflow its containers if the text is long enough](https://jira.pingidentity.com/browse/UIP-2495)
 - [UIP-2623 Error should be on entire Unit Input component](https://jira.pingidentity.com/browse/UIP-2623)
 - [UIP-2634 Write Tests to make sure Data Ids do not change](https://jira.pingidentity.com/browse/UIP-2634)
