Edited Cannonball documentation to refer to our planned v4 release date as well as our period of developing for both 3 and 4.

--- a/packages/ui-library/src/demo/components/docs/cannonball/GettingReadyV4.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/GettingReadyV4.mdx
@@ -1,6 +1,7 @@
 # Getting Ready for Cannonball: the UI Library Version 4.0.0
 
-We are currently planning to release version 4.0.0 in October 2019. while we will continue to support v3 of the Library, all further component development will be done in v4.
+We are currently planning to release version 4.0.0 in October 2019, followed by a short period of joint v3 and v4 development.
+While we will continue to support v3 of the Library, beginning in 2020, all further component development will be done in v4.
 
 You can try out a beta version of v4 in your projects with this command: `npm install ui-library@beta`
 
