--- a/packages/ui-library/src/demo/components/docs/cannonball/Timeline.mdx
+++ b/packages/ui-library/src/demo/components/docs/cannonball/Timeline.mdx
@@ -12,6 +12,10 @@ The UI Library team will no longer add new deprecation warnings to give a 3 mont
 ### 4.0.0 beta
 A beta version of the library with v4 changes will be made available as a node module that can be included in projects for testing.
 
-## October
-### 4.0.0 release
-UI Library v4.0.0 will be released. 3.x releases will still work, but no new work or releases will be done in v3. All new designs and features will take place in v4.
+## October 31
+### 4.0.0 release and start of joint development
+UI Library v4.0.0 will be released. Component development will continue in both v3 and v4 for two months.
+
+## January 1, 2020
+### End of joint development
+3.x releases will still work, but no new work or releases will be done in v3. All new designs and features will take place in v4.
