new end user error and inactive screen

--- a/packages/end-user/src/demo/Layouts.mdx
+++ b/packages/end-user/src/demo/Layouts.mdx
@@ -594,3 +594,15 @@ to the `.two-sided` div.
 <ComponentDemo>
     <SmsPairingDemo />
 </ComponentDemo>
+
+### Error Screen
+
+<ComponentDemo>
+    <Card>
+        <Logo src="ping-logo.svg"/>
+        <IconFeedback type="error">Trial Expired</IconFeedback>
+        <TextBlock spacing="xxlarge" size="large">To extend your trial, please contact us.</TextBlock>
+        <Button label="Contact Us" type={ButtonTypes.PRIMARY}/>
+    </Card>
+</ComponentDemo>
+
