--- a/packages/end-user/src/demo/Feedback.mdx
+++ b/packages/end-user/src/demo/Feedback.mdx
@@ -13,6 +13,7 @@ import Heading from '../components/Heading';
 import IconFeedback from '../components/IconFeedback';
 import Logo from '../components/Logo';
 import ModalMenu from '../components/ModalMenu';
+import Padding, { sizes } from '../components/shared/Padding';
 import Requirements from '../components/Requirements';
 import SerializedData from '../components/SerializedData';
 import Spinner from '../components/Spinner';
@@ -262,4 +263,27 @@ to the `.two-sided` div.
             </TextStyle>
         </TextBlock>
     </Card>
+</ComponentDemo>
+
+### Error Screen
+
+<ComponentDemo>
+    <Card type="error">
+        <Logo src="ping-logo.svg"/>
+        <IconFeedback type="hourGlass" bold>Trial Expired</IconFeedback>
+        <TextBlock size="large" alignment="center">To extend your trial, please contact us.</TextBlock>
+        <Button label="Contact Us" type={ButtonTypes.PRIMARY}/>
+    </Card>
+</ComponentDemo>
+
+### Account Inactive Screen
+
+<ComponentDemo>
+    <Card type="error">
+        <Logo src="jj-logo.png"/>
+        <Padding top={sizes.LG}>
+            <IconFeedback type="safe" bold>Account Inactive</IconFeedback>
+        </Padding>
+        <TextBlock size="large">This service is no longer active.</TextBlock>
+        </Card>
 </ComponentDemo>
