UIP-2879: End user phone input

--- a/packages/end-user/src/demo/Inputs.mdx
+++ b/packages/end-user/src/demo/Inputs.mdx
@@ -23,9 +23,16 @@ import TextBlock from '../components/TextBlock';
 import TextInput, { textInputTypes } from '../components/TextInput';
 import TextStyle from '../components/TextStyle';
 import Tooltip from '../components/Tooltip';
+import PhoneInput from '../components/PhoneInput';
 import ComponentDemo from './components/ComponentDemo';
 
 # Inputs
+
+## Phone Input
+
+<ComponentDemo>
+    <PhoneInput />
+</ComponentDemo>
 
 ## Text Input
 
