UIP-3088: Upload Ping logo to CDN [end-user]

--- a/packages/end-user/src/demo/Catalog.mdx
+++ b/packages/end-user/src/demo/Catalog.mdx
@@ -32,7 +32,7 @@ This is a catalog of components.
 The logo that sits atop the form.
 
 <ComponentDemo>
-    <Logo src="ping-logo.svg"/>
+    <Logo src="../images/ping-logo.svg"/>
 </ComponentDemo>
 
 ## Heading
