--- a/packages/end-user/src/demo/Feedback.mdx
+++ b/packages/end-user/src/demo/Feedback.mdx
@@ -28,7 +28,7 @@ import ComponentDemo from './components/ComponentDemo';
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="error">Error</IconFeedback>
         <TextBlock size="small">
             <p>The actor attempting to perform the request is not authorized.</p>
@@ -42,7 +42,7 @@ import ComponentDemo from './components/ComponentDemo';
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="success">Signed Off</IconFeedback>
         <Button label="Sign On"/>
     </Card>
@@ -50,7 +50,7 @@ import ComponentDemo from './components/ComponentDemo';
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="success" small>Registered</IconFeedback>
         <TextBlock>Now that you've registered, you can either continue on or edit your profile.</TextBlock>
         <ButtonSet>
@@ -64,7 +64,7 @@ import ComponentDemo from './components/ComponentDemo';
 
 <ComponentDemo>
     <Card width="large">
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading> Invalid Sign-on URL </Heading>
         <TextBlock>
             <p>
@@ -88,7 +88,7 @@ to the `.two-sided` div.
     <TwoSidedDemo
         renderSides={onFlip => ([
             <Card key="front">
-                <Logo src="ping-logo.svg"/>
+                <Logo src="../images/ping-logo.svg"/>
                 <IconFeedback type="error">Error</IconFeedback>
                 <StepLink onClick={onFlip}>View Details</StepLink>
             </Card>,
@@ -123,7 +123,7 @@ to the `.two-sided` div.
 ### Reset password
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>
             Reset Your Password
         </Heading>
@@ -140,7 +140,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>
             Reset Your Password
         </Heading>
@@ -158,7 +158,7 @@ to the `.two-sided` div.
 ### Reset Password if clicking on reset button
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>
             Reset Your Password
         </Heading>
@@ -175,7 +175,7 @@ to the `.two-sided` div.
 ### Reset Password if clicking on "have a reset code?"
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>
             Reset Your Password
         </Heading>
@@ -191,7 +191,7 @@ to the `.two-sided` div.
 ### Code Expired
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>
             Reset Your Password
         </Heading>
@@ -207,7 +207,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Change Password</Heading>
         <Feedback type="error">
             Password cannot contain information from your user profile
@@ -223,7 +223,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="success" medium>Password Changed</IconFeedback>
         <Button label="Continue" type={ButtonTypes.SECONDARY}/>
     </Card>
@@ -231,7 +231,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Thank You!</Heading>
         <TextBlock>
             We've sent a verification email to IronMan1@ping.com.
@@ -243,7 +243,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="success" small>You're Registered</IconFeedback>
         <TextBlock spacing="xxlarge">Your account is setup and ready to go.</TextBlock>
         <Button label="Sign On" type={ButtonTypes.PRIMARY}/>
@@ -252,7 +252,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="error" small>Something Went Wrong</IconFeedback>
         <TextBlock>An unknown error is preventing us from signing you on.</TextBlock>
         <Form><Button label="Try Again" /></Form>
@@ -268,7 +268,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card error>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="hourGlass" bold>Trial Expired</IconFeedback>
         <TextBlock size="large">To extend your trial, please contact us.</TextBlock>
         <Button label="Contact Us" type={ButtonTypes.PRIMARY}/>
