--- a/packages/end-user/src/demo/Layouts.mdx
+++ b/packages/end-user/src/demo/Layouts.mdx
@@ -47,7 +47,7 @@ import UserNav, { UserInfo, imageSizes } from '../components/shared/UserNav';
             </CardMessage>
         )}
     >
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Form>
             <FloatLabelTextInput label="Username" id="username6"/>
             <FloatLabelPasswordInput label="Password" id="password2"/>
@@ -69,7 +69,7 @@ import UserNav, { UserInfo, imageSizes } from '../components/shared/UserNav';
 ### With an error
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Feedback type="error">Cannot sign on. There is a problem with either your username or password.</Feedback>
         <Form>
             <FloatLabelTextInput label="Username" id="username7"/>
@@ -96,7 +96,7 @@ import UserNav, { UserInfo, imageSizes } from '../components/shared/UserNav';
 ### Just the password
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Hello Cindy Lou Who,</Heading>
         <TextBlock>Please enter your password below:</TextBlock>
         <Form>
@@ -110,7 +110,7 @@ import UserNav, { UserInfo, imageSizes } from '../components/shared/UserNav';
 ### Reset password
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Feedback type="error">Too many unsuccessful sign-on attempts. Please reset your password.</Feedback>
         <Form>
             <Button label="Reset Password" type={ButtonTypes.PRIMARY}/>
@@ -121,7 +121,7 @@ import UserNav, { UserInfo, imageSizes } from '../components/shared/UserNav';
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="error">Error</IconFeedback>
         <TextBlock size="small">
             <p>The actor attempting to perform the request is not authorized.</p>
@@ -135,7 +135,7 @@ import UserNav, { UserInfo, imageSizes } from '../components/shared/UserNav';
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="success">Signed Off</IconFeedback>
         <Button label="Sign On"/>
     </Card>
@@ -143,7 +143,7 @@ import UserNav, { UserInfo, imageSizes } from '../components/shared/UserNav';
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Change Password</Heading>
         <Feedback type="alert">Your password has expired. Please create a new one.</Feedback>
         <Form>
@@ -186,7 +186,7 @@ import UserNav, { UserInfo, imageSizes } from '../components/shared/UserNav';
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="success" small>Registered</IconFeedback>
         <TextBlock>Now that you've registered, you can either continue on or edit your profile.</TextBlock>
         <ButtonSet>
@@ -200,7 +200,7 @@ import UserNav, { UserInfo, imageSizes } from '../components/shared/UserNav';
 
 <ComponentDemo>
     <Card width="large">
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading> Invalid Sign-on URL </Heading>
         <TextBlock>
             <p>
@@ -224,7 +224,7 @@ to the `.two-sided` div.
     <TwoSidedDemo
         renderSides={onFlip => ([
             <Card key="front">
-                <Logo src="ping-logo.svg"/>
+                <Logo src="../images/ping-logo.svg"/>
                 <IconFeedback type="error">Error</IconFeedback>
                 <StepLink onClick={onFlip}>View Details</StepLink>
             </Card>,
@@ -260,7 +260,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Form>
             <FloatLabelTextInput label="Username" id="username9"/>
             <FloatLabelPasswordInput label="Password" id="password6"/>
@@ -273,7 +273,7 @@ to the `.two-sided` div.
 ### Reset password
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>
             Reset Your Password
         </Heading>
@@ -290,7 +290,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>
             Reset Your Password
         </Heading>
@@ -308,7 +308,7 @@ to the `.two-sided` div.
 ### Reset Password if clicking on reset button
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>
             Reset Your Password
         </Heading>
@@ -325,7 +325,7 @@ to the `.two-sided` div.
 ### Reset Password if clicking on "have a reset code?"
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>
             Reset Your Password
         </Heading>
@@ -341,7 +341,7 @@ to the `.two-sided` div.
 ### Code Expired
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>
             Reset Your Password
         </Heading>
@@ -360,7 +360,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Change Password</Heading>
         <Form>
             <FloatLabelPasswordInput label="New Password" id="newPwd1" />
@@ -372,7 +372,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Change Password</Heading>
         <Form>
             <FloatLabelPasswordInput label="New Password" id="newPwD2" defaultValue="eightPassword">
@@ -408,7 +408,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Change Password</Heading>
         <Form>
             <FloatLabelPasswordInput label="New Password" id="newPwD3" defaultValue="eightPassword" success>
@@ -444,7 +444,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Change Password</Heading>
         <Form>
             <FloatLabelPasswordInput label="New Password" id="newPwD4" defaultValue="eightPassword" success>
@@ -480,7 +480,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Change Password</Heading>
         <Feedback type="error">
             Password cannot contain information from your user profile
@@ -496,7 +496,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="success" medium>Password Changed</IconFeedback>
         <Button label="Continue" type={ButtonTypes.SECONDARY}/>
     </Card>
@@ -507,7 +507,7 @@ to the `.two-sided` div.
 ### Create Profile Form
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Create Your Profile</Heading>
         <TextBlock size="small">Enter the required information below.</TextBlock>
         <Form spacing="large" >
@@ -531,7 +531,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Create Your Profile</Heading>
         <TextBlock size="small">Enter the required information below.</TextBlock>
         <Form spacing="large">
@@ -579,7 +579,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Heading>Thank You!</Heading>
         <TextBlock>
             We've sent a verification email to IronMan1@ping.com.
@@ -591,7 +591,7 @@ to the `.two-sided` div.
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="success" small>You're Registered</IconFeedback>
         <TextBlock spacing="xxlarge">Your account is setup and ready to go.</TextBlock>
         <Button label="Sign On" type={ButtonTypes.PRIMARY}/>
@@ -607,7 +607,7 @@ to the `.two-sided` div.
 ## User-Selector Table
 <ComponentDemo>
     <Card> 
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <TextBlock> Please select the account to login with:</TextBlock>
             <FlexRow spacing={spacingOptions.MD} alignment={flexRowAlignments.CENTER} flexDirection={flexDirectionOptions.COLUMN}>
                 <TileButton type="side-icon">
