--- a/packages/end-user/src/demo/MFA.mdx
+++ b/packages/end-user/src/demo/MFA.mdx
@@ -22,7 +22,7 @@ import ComponentDemo from "./components/ComponentDemo";
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <TextBlock>Enter the passcode you received to complete authentication.</TextBlock>
         <Form>
             <TextInput type={textInputTypes.PRIMARY} defaultValue="012345"/>
@@ -39,7 +39,7 @@ import ComponentDemo from "./components/ComponentDemo";
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <Feedback type="error">Invalid passcode</Feedback>
         <TextBlock>Enter the passcode you received to complete authentication.</TextBlock>
         <Form>
@@ -57,14 +57,14 @@ import ComponentDemo from "./components/ComponentDemo";
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="success">Authenticated</IconFeedback>
     </Card>
 </ComponentDemo>
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="timeout">Timed Out</IconFeedback>
         <Button label="Back"/>
     </Card>
@@ -72,7 +72,7 @@ import ComponentDemo from "./components/ComponentDemo";
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="error">Error</IconFeedback>
         <TextBlock size="small">
             Error message content will appear here when required to further explain the type of error and what can be done to resolve it, if there is a solution.
@@ -83,7 +83,7 @@ import ComponentDemo from "./components/ComponentDemo";
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="stopped">Blocked</IconFeedback>
         <TextBlock size="small">
             Blocked is a policy enforcement situation where the user isn’t meeting policy or has violated policy through repeated attempts at authentication and failing.
@@ -93,7 +93,7 @@ import ComponentDemo from "./components/ComponentDemo";
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="stopped">Canceled</IconFeedback>
         <Button label="Back"/>
     </Card>
@@ -101,14 +101,14 @@ import ComponentDemo from "./components/ComponentDemo";
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <IconFeedback type="disabled">Disabled</IconFeedback>
     </Card>
 </ComponentDemo>
 
 <ComponentDemo>
     <Card>
-        <Logo src="ping-logo.svg"/>
+        <Logo src="../images/ping-logo.svg"/>
         <TextBlock>Enter the passcode you received to complete authentication.</TextBlock>
         <Form>
             <TextInput type={textInputTypes.PRIMARY} defaultValue="012345"/>
